minor spacing issues update

--- a/src/styles/RevealerGame.css
+++ b/src/styles/RevealerGame.css
@@ -103,13 +103,21 @@ body, html {
     display: flex;
     align-items: center;
     justify-content: center; 
+    margin-bottom: 0;
+    margin-top:1rem;
+    border-bottom: 0;
   }
   .gameInfo h2 {
-    margin-bottom: 1.5rem; 
+    margin-top: 0.1rem;
+    margin-bottom:0rem; 
+    border-bottom: 0;
   }
 
   .gameInfo h5 {
-    margin-top: 0.5rem;
+    margin-bottom: 1rem;
+    margin-top:1rem;
+    border-top: 0;
+   
   }
   .gameInfo img{
     width: 100px;
